plugins {
    id 'java'
    id 'maven-publish'
//    id 'signing'
}
apply from: 'version.gradle'

group = applicationGroup
//archivesBaseName =  applicationName
version = applicationVersion
project.version = applicationVersion
description = applicationName
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17


repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2')
    }
}
dependencies {
    implementation "com.fasterxml.jackson.core:jackson-core:${jackson}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${jackson}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${jackson}"
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2-b01'
    implementation group: 'net.minidev', name: 'json-smart', version: "${minidevVersion}"

    compileOnly "org.projectlombok:lombok:${lombok}"
    annotationProcessor "org.projectlombok:lombok:${lombok}"

    implementation "org.apache.commons:commons-lang3:${commonsLang}"

    testCompileOnly "org.projectlombok:lombok:${lombok}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombok}"
    // JUnit Jupiter API for writing tests
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"

    // JUnit Jupiter Engine for running tests
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"

}

// Ensure that Javadoc is generated
task generateJavadoc(type: Javadoc) {
    source = sourceSets.main.allJava
    classpath = configurations.compileClasspath
    options.memberLevel = JavadocMemberLevel.PRIVATE
    options.author = true
    options.version = true
    options.links("https://docs.oracle.com/en/java/javase/17/docs/api/")
}

// Create a JAR for Javadoc
//task javadocJar(type: Jar) {
//    archiveClassifier.set('javadoc')
//    from generateJavadoc.destinationDir
//    dependsOn generateJavadoc
//}
//
//task sourcesJar(type: Jar) {
//    archiveClassifier.set('sources')
//    from sourceSets.main.allSource
//}

//
java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

wrapper {
    gradleVersion = "8.6"
    distributionType = Wrapper.DistributionType.BIN
}
//publishing {
//    publications {
//        mavenJava(MavenPublication) {
//            from components.java
//            artifact sourcesJar
//            artifact javadocJar
//
//            versionMapping {
//                usage('java-api') {
//                    fromResolutionOf('runtimeClasspath')
//                }
//                usage('java-runtime') {
//                    fromResolutionResult()
//                }
//            }
//            pom {
//                name = 'Ulegalize Share Library'
//                packaging = 'jar'
//                description = 'A application used to share library between Ulegalize application'
//                url = 'https://workspace.ulegalize.com'
//                licenses {
//                    license {
//                        name = 'EUROPEAN UNION PUBLIC LICENCE v. 1.2'
//                        url = 'https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/eupl_v1.2_en.pdf'
//                    }
//                }
//                developers {
//                    developer {
//                        id = 'fumajul'
//                        name = 'Julien Fumanti'
//                        email = 'julien.fumanti@finauxa.com'
//                    }
//                }
//                scm {
//                    connection = 'scm:git:git://bitbucket.org:finauxa/ulegalizeshare.git'
//                    developerConnection = 'scm:git:ssh://bitbucket.org:finauxa/ulegalizeshare.git'
//                    url = 'https://bitbucket.org/finauxa/ulegalizeshare'
//                }
//            }
//        }
//    }
////    repositories {
////        maven {
////            // change URLs to point to your repos, e.g. http://my.org/repo
////            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
////            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
////            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
////            credentials {
////                username = ossrhUsername
////                password = ossrhPassword
////            }
////        }
////    }
//}

test {
    useJUnitPlatform()
}
//artifacts {
//    archives javadocJar, sourcesJar
//}
//signing {
//    required { gradle.taskGraph.hasTask("publish") }
//    sign publishing.publications.mavenJava
//}

//signing {
//    sign configurations.archives
//}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
